examples/test/testpolicy1380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1380
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key36: value48
      key4: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value10
          key37: value29
      podSelector:
        matchLabels:
          key7: value27
